--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module MooseX::Role::Timer
 
+0.05 2015-01-31
+    - now uses Moo as the use of Any::Moose is now deprecated
+
 0.04 2014-01-05
     - convert distribution to use Dist::Zilla
     - applied debian patches to be compatible with Any::Moose
